fix appointment